--- a/lib/dune
+++ b/lib/dune
@@ -2,9 +2,10 @@
  (name GLib)
  (public_name gi-glib2)
  (libraries ctypes ctypes.foreign memcpy)
- (c_names dyn_load_constants_stubs)
- (c_flags
-  (:include c_flags.sexp))
+ (foreign_stubs
+  (language c)
+  (names dyn_load_constants_stubs)
+  (flags :standard (:include c_flags.sexp)))
  (c_library_flags
   (:include c_library_flags.sexp))
  (ocamlopt_flags
