--- a/tests/dune
+++ b/tests/dune
@@ -1,10 +1,3 @@
-(executables
+(tests
  (names tests)
- (libraries gi-glib2 oUnit str memcpy))
-
-(alias
- (name runtest)
- (deps
-  (:< tests.exe))
- (action
-  (run %{<})))
+ (libraries gi-glib2 ounit2 str memcpy))
