Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,132 @@
 _build/
 _opam/
 *.install
+
+lib/Ascii_type.ml
+lib/Ascii_type.mli
+lib/Bookmark_file_error.ml
+lib/Bookmark_file_error.mli
+lib/Checksum_type.ml
+lib/Checksum_type.mli
+lib/Convert_error.ml
+lib/Convert_error.mli
+lib/Core_raw.ml
+lib/Core_raw.mli
+lib/Date.ml
+lib/Date.mli
+lib/Date_dmy.ml
+lib/Date_dmy.mli
+lib/Date_month.ml
+lib/Date_month.mli
+lib/Date_time.ml
+lib/Date_time.mli
+lib/Date_weekday.ml
+lib/Date_weekday.mli
+lib/Error.ml
+lib/Error.mli
+lib/Error_type.ml
+lib/Error_type.mli
+lib/File_error.ml
+lib/File_error.mli
+lib/File_set_contents_flags.ml
+lib/File_set_contents_flags.mli
+lib/File_test.ml
+lib/File_test.mli
+lib/Format_size_flags.ml
+lib/Format_size_flags.mli
+lib/Hook_flag_mask.ml
+lib/Hook_flag_mask.mli
+lib/IOChannel_error.ml
+lib/IOChannel_error.mli
+lib/IOCondition.ml
+lib/IOCondition.mli
+lib/IOError.ml
+lib/IOError.mli
+lib/IOFlags.ml
+lib/IOFlags.mli
+lib/IOStatus.ml
+lib/IOStatus.mli
+lib/Key_file_error.ml
+lib/Key_file_error.mli
+lib/Key_file_flags.ml
+lib/Key_file_flags.mli
+lib/Log_level_flags.ml
+lib/Log_level_flags.mli
+lib/Log_writer_output.ml
+lib/Log_writer_output.mli
+lib/Markup_collect_type.ml
+lib/Markup_collect_type.mli
+lib/Markup_error.ml
+lib/Markup_error.mli
+lib/Markup_parse_flags.ml
+lib/Markup_parse_flags.mli
+lib/Normalize_mode.ml
+lib/Normalize_mode.mli
+lib/Number_parser_error.ml
+lib/Number_parser_error.mli
+lib/Once_status.ml
+lib/Once_status.mli
+lib/Option_arg.ml
+lib/Option_arg.mli
+lib/Option_error.ml
+lib/Option_error.mli
+lib/Option_flags.ml
+lib/Option_flags.mli
+lib/Rand.ml
+lib/Rand.mli
+lib/Regex_compile_flags.ml
+lib/Regex_compile_flags.mli
+lib/Regex_error.ml
+lib/Regex_error.mli
+lib/Regex_match_flags.ml
+lib/Regex_match_flags.mli
+lib/Seek_type.ml
+lib/Seek_type.mli
+lib/Shell_error.ml
+lib/Shell_error.mli
+lib/Slice_config.ml
+lib/Slice_config.mli
+lib/Spawn_error.ml
+lib/Spawn_error.mli
+lib/Spawn_flags.ml
+lib/Spawn_flags.mli
+lib/Test_file_type.ml
+lib/Test_file_type.mli
+lib/Test_log_type.ml
+lib/Test_log_type.mli
+lib/Test_result.ml
+lib/Test_result.mli
+lib/Test_subprocess_flags.ml
+lib/Test_subprocess_flags.mli
+lib/Thread_error.ml
+lib/Thread_error.mli
+lib/Time_type.ml
+lib/Time_type.mli
+lib/Time_zone.ml
+lib/Time_zone.mli
+lib/Token_type.ml
+lib/Token_type.mli
+lib/Traverse_flags.ml
+lib/Traverse_flags.mli
+lib/Traverse_type.ml
+lib/Traverse_type.mli
+lib/Unicode_break_type.ml
+lib/Unicode_break_type.mli
+lib/Unicode_script.ml
+lib/Unicode_script.mli
+lib/Unicode_type.ml
+lib/Unicode_type.mli
+lib/Uri_error.ml
+lib/Uri_error.mli
+lib/Uri_flags.ml
+lib/Uri_flags.mli
+lib/Uri_hide_flags.ml
+lib/Uri_hide_flags.mli
+lib/Uri_params_flags.ml
+lib/Uri_params_flags.mli
+lib/User_directory.ml
+lib/User_directory.mli
+lib/Variant_class.ml
+lib/Variant_class.mli
+lib/Variant_parse_error.ml
+lib/Variant_parse_error.mli
