--- a/lib/dune
+++ b/lib/dune
@@ -5,7 +5,9 @@
  (foreign_stubs
   (language c)
   (names dyn_load_constants_stubs)
-  (flags :standard (:include c_flags.sexp)))
+  (flags
+   :standard
+   (:include c_flags.sexp)))
  (c_library_flags
   (:include c_library_flags.sexp))
  (ocamlopt_flags
